# vector-db-bench

./: LICENSE  README.md  pyproject.toml
src/vector_db_bench/: __init__.py  benchmark.py
tests/: test_benchmark.py
